listings pagination, order and filter

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="row">
 
-        {% if listings%}
+        {% if listings %}
           {% for listing in listings %}
            <div class="col-md-6 col-lg-4 mb-4">
             <div class="card listing-preview">
@@ -89,26 +89,47 @@
         </div>
 
      
-
+      <!-- Page Navigation -->
       <div class="row">
         <div class="col-md-12">
-          <ul class="pagination">
-            <li class="page-item disabled">
-              <a class="page-link" href="#">&laquo;</a>
-            </li>
-            <li class="page-item active">
-              <a class="page-link" href="#">1</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">2</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">3</a>
-            </li>
-            <li class="page-item">
-              <a class="page-link" href="#">&raquo;</a>
-            </li>
-          </ul>
+          {% if listings.has_other_pages %}
+            <ul class="pagination">
+              {% if listings.has_previous %}
+              <li class="page-item primary">
+                <a class="page-link" href="?page={{ listings.previous_page_number }}">&laquo;</a>
+              </li>
+              {% else %}
+              <li class="page-item disabled secondary">
+                <a class="page-link">&laquo;</a>
+              </li>
+              {% endif %}
+
+              {% for i in listings.paginator.page_range %}
+                 {% if listings.number == i %}
+                 <li class="page-item active">
+                  <a class="page-link" href="#">{{i}}</a>
+                 </li>
+                 {% else %}
+                 <li class="page-item">
+                  <a class="page-link" href="?page={{i}}">{{i}}</a>
+                </li>
+                 {% endif %}
+
+                 
+              
+              {% endfor %}
+
+              {% if listings.has_next %}
+              <li class="page-item primary ">
+                <a class="page-link" href="?page={{ listings.next_page_number }}">&raquo;</a>
+              </li>
+              {% else %}
+              <li class="page-item disabled secondary">
+                <a class="page-link">&raquo;</a>
+              </li>
+              {% endif %}
+            </ul>
+          {% endif %}
         </div>
       </div>
     </div>
