--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -95,11 +95,11 @@
           {% if listings.has_other_pages %}
             <ul class="pagination">
               {% if listings.has_previous %}
-              <li class="page-item primary">
+              <li class="page-item">
                 <a class="page-link" href="?page={{ listings.previous_page_number }}">&laquo;</a>
               </li>
               {% else %}
-              <li class="page-item disabled secondary">
+              <li class="page-item disabled">
                 <a class="page-link">&laquo;</a>
               </li>
               {% endif %}
@@ -120,11 +120,11 @@
               {% endfor %}
 
               {% if listings.has_next %}
-              <li class="page-item primary ">
+              <li class="page-item">
                 <a class="page-link" href="?page={{ listings.next_page_number }}">&raquo;</a>
               </li>
               {% else %}
-              <li class="page-item disabled secondary">
+              <li class="page-item disabled">
                 <a class="page-link">&raquo;</a>
               </li>
               {% endif %}
