user registration and login

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,6 +4,8 @@
 {% block title %}CAD Properties{% endblock %}
 {% block content%}
 <!-- Showcase -->
+<!-- Alerts -->
+{% include 'partials/_alerts.html' %}
 <section id="showcase">
     <div class="container text-center">
       <div class="home-search p-5">
