--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -168,25 +168,35 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form action="{% url 'contact' %}" method="POST">
+            {% csrf_token %}
+            <!-- hidden inputs -->
+            {% if user.is_authenticated %}
+            <input type="hidden" name="user_id" class="form-control" value="{{ user.id }}" required>
+            {% else %}
+            <input type="hidden" name="user_id" class="form-control" value="0" required>
+            {% endif %}
+            <input type="hidden" name="realtor_email" class="form-control" value="{{ listing.realtor.email }}">
+            <input type="hidden" name="listing_id" class="form-control" value="{{ listing.id }}" >
+            <!-- user inputs -->
             <div class="form-group">
               <label for="property_name" class="col-form-label">Property:</label>
               <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
             </div>
             <div class="form-group">
               <label for="name" class="col-form-label">Name:</label>
-              <input type="text" name="name" class="form-control" required>
+              <input type="text" name="name" class="form-control" {% if user.is_authenticated %} value="{{ user.first_name}} {{ user.last_name}}" {% endif %} required>
             </div>
             <div class="form-group">
               <label for="email" class="col-form-label">Email:</label>
-              <input type="email" name="email" class="form-control" required>
+              <input type="email" name="email" class="form-control" {% if user.is_authenticated %} value="{{ user.email }}" {% endif %} required>
             </div>
             <div class="form-group">
-              <label for="phone" class="col-form-label">Phone:</label>
+              <label for="phone" class="col-form-label">Phone: *</label>
               <input type="text" name="phone" class="form-control">
             </div>
             <div class="form-group">
-              <label for="message" class="col-form-label">Message:</label>
+              <label for="message" class="col-form-label">Message: *</label>
               <textarea name="message" class="form-control"></textarea>
             </div>
             <hr>
