--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -31,7 +31,7 @@
       </nav>
     </div>
   </section>
-
+  {% include 'partials/_alerts.html' %}
 <!-- Listing -->
 <section id="listing" class="py-4">
     <div class="container">
@@ -168,6 +168,7 @@
           </button>
         </div>
         <div class="modal-body">
+          {% include 'partials/_alerts.html' %}
           <form action="{% url 'contact' %}" method="POST">
             {% csrf_token %}
             <!-- hidden inputs -->
@@ -181,14 +182,14 @@
             <!-- user inputs -->
             <div class="form-group">
               <label for="property_name" class="col-form-label">Property:</label>
-              <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
+              <input type="text" name="listing" class="form-control" value="{{ listing.title }}">
             </div>
             <div class="form-group">
-              <label for="name" class="col-form-label">Name:</label>
+              <label for="name" class="col-form-label">Name:*</label>
               <input type="text" name="name" class="form-control" {% if user.is_authenticated %} value="{{ user.first_name}} {{ user.last_name}}" {% endif %} required>
             </div>
             <div class="form-group">
-              <label for="email" class="col-form-label">Email:</label>
+              <label for="email" class="col-form-label">Email:*</label>
               <input type="email" name="email" class="form-control" {% if user.is_authenticated %} value="{{ user.email }}" {% endif %} required>
             </div>
             <div class="form-group">
