--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static%}
-{% block title %}CAD Properties{% endblock %}
+{% block title %}BT Properties{% endblock %}
 {% block content%}
 
 <section id="showcase-inner" class="py-5 text-white">
