--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load humanize %}
-{% block title %}CAD Properties{% endblock %}
+{% block title %}BT Properties{% endblock %}
 {% block content%}
 <!-- Showcase -->
 <!-- Alerts -->
